--- a/.github/workflows/download-vehicles.yml
+++ b/.github/workflows/download-vehicles.yml
@@ -90,65 +90,221 @@ jobs:
               ]);
               await sleep(5000);
               console.log('URL after login:', page.url());
+              await page.screenshot({ path: 'step3-after-login.png', fullPage: true });
 
-              // Step 4: Navigate directly to Consulta_Veiculos.aspx (Veículos page)
-              console.log('Step 4: Navigating to Consulta_Veiculos.aspx...');
-              await page.goto('https://sistema.primebeneficios.com.br/Admin/Consulta_Veiculos.aspx', {
-                waitUntil: 'networkidle2',
-                timeout: 60000
-              });
+              // Step 4: Wait for iframe to load and get the main frame
+              console.log('Step 4: Looking for iframe...');
               await sleep(3000);
-              console.log('URL after navigation:', page.url());
-              await page.screenshot({ path: 'step4-veiculos.png', fullPage: true });
 
-              // Step 5: Open Ações dropdown and click XLS
-              console.log('Step 5: Opening Ações dropdown...');
-              const acoesClicked = await page.evaluate(() => {
-                const buttons = document.querySelectorAll('button');
-                for (const btn of buttons) {
-                  if (btn.textContent.trim() === 'Ações') {
-                    btn.click();
-                    return true;
+              // The admin panel uses an iframe structure. We need to find and work with it.
+              const frames = page.frames();
+              console.log('Found frames:', frames.length);
+              frames.forEach((f, i) => console.log(`Frame ${i}: ${f.url()}`));
+
+              // Try to find the content iframe
+              let contentFrame = null;
+              for (const frame of frames) {
+                const url = frame.url();
+                if (url.includes('Admin') && !url.includes('Admin.aspx')) {
+                  contentFrame = frame;
+                  console.log('Found content frame:', url);
+                  break;
+                }
+              }
+
+              // If no content frame found, try navigating directly within the current context
+              // by executing JavaScript in the page context
+              console.log('Step 5: Navigating to Veiculos page via menu...');
+
+              // Try clicking menu through JavaScript
+              const menuClicked = await page.evaluate(() => {
+                // Try to find and click CONSULTA menu
+                const menuItems = document.querySelectorAll('a, li');
+                for (const item of menuItems) {
+                  if (item.textContent && item.textContent.trim().toUpperCase().includes('CONSULTA')) {
+                    item.click();
+                    return { found: 'CONSULTA', clicked: true };
                   }
                 }
-                return false;
+
+                // Try in iframes
+                const iframes = document.querySelectorAll('iframe');
+                for (const iframe of iframes) {
+                  try {
+                    const iframeDoc = iframe.contentDocument || iframe.contentWindow.document;
+                    const items = iframeDoc.querySelectorAll('a, li');
+                    for (const item of items) {
+                      if (item.textContent && item.textContent.trim().toUpperCase().includes('CONSULTA')) {
+                        item.click();
+                        return { found: 'CONSULTA in iframe', clicked: true };
+                      }
+                    }
+                  } catch(e) {
+                    // cross-origin
+                  }
+                }
+                return { found: false };
               });
-              console.log('Ações clicked:', acoesClicked);
-              await sleep(1000);
-              await page.screenshot({ path: 'step5-acoes-open.png', fullPage: true });
+              console.log('Menu click result:', JSON.stringify(menuClicked));
+              await sleep(2000);
+              await page.screenshot({ path: 'step5-after-menu.png', fullPage: true });
 
-              // Step 6: Click XLS download
-              console.log('Step 6: Clicking XLS download...');
-              const xlsClicked = await page.evaluate(() => {
-                // Try clicking by ID first (download_txt for XLS)
-                const xlsLink = document.getElementById('download_txt');
-                if (xlsLink) {
-                  xlsLink.click();
-                  return { method: 'id', success: true };
+              // Step 6: Click on Veículos submenu
+              console.log('Step 6: Looking for Veículos submenu...');
+              const veiculosClicked = await page.evaluate(() => {
+                const findAndClick = (doc) => {
+                  const items = doc.querySelectorAll('a, li, span');
+                  for (const item of items) {
+                    const text = item.textContent ? item.textContent.trim().toUpperCase() : '';
+                    if (text === 'VEÍCULOS' || text === 'VEICULOS') {
+                      item.click();
+                      return true;
+                    }
+                  }
+                  return false;
+                };
+
+                if (findAndClick(document)) return { found: 'main doc', clicked: true };
+
+                const iframes = document.querySelectorAll('iframe');
+                for (const iframe of iframes) {
+                  try {
+                    const iframeDoc = iframe.contentDocument || iframe.contentWindow.document;
+                    if (findAndClick(iframeDoc)) return { found: 'iframe', clicked: true };
+                  } catch(e) {}
                 }
+                return { found: false };
+              });
+              console.log('Veículos click result:', JSON.stringify(veiculosClicked));
+              await sleep(3000);
+              await page.screenshot({ path: 'step6-after-veiculos.png', fullPage: true });
 
-                // Try looking for a link with "XLS" text
-                const links = document.querySelectorAll('a');
-                for (const link of links) {
-                  if (link.textContent.trim().toUpperCase() === 'XLS') {
-                    link.click();
-                    return { method: 'text', success: true };
+              // Step 7: Navigate directly to Consulta_Veiculos.aspx within the iframe
+              console.log('Step 7: Trying direct navigation within iframe context...');
+
+              // Get all frames again after navigation
+              await sleep(2000);
+              const allFrames = page.frames();
+              console.log('Current frames:', allFrames.length);
+
+              let targetFrame = page.mainFrame();
+              for (const frame of allFrames) {
+                const url = frame.url();
+                console.log('Checking frame:', url);
+                if (url.includes('sistema.primebeneficios.com.br')) {
+                  targetFrame = frame;
+                  console.log('Using frame:', url);
+                  break;
+                }
+              }
+
+              // Try navigating using __doPostBack which is how ASP.NET navigation works
+              console.log('Step 8: Attempting __doPostBack navigation...');
+              const postbackResult = await targetFrame.evaluate(() => {
+                // Try to find the menu and trigger navigation
+                if (typeof __doPostBack === 'function') {
+                  // Common ASP.NET postback targets for menu items
+                  const possibleTargets = [
+                    'ctl00$MenuLateral1$rptMenu$ctl02$rptSubMenu$ctl01$lnkSubItem',
+                    'ctl00$MenuLateral1$rptMenu$ctl01$rptSubMenu$ctl00$lnkSubItem',
+                    'MenuLateral1$rptMenu$ctl02$rptSubMenu$ctl01$lnkSubItem'
+                  ];
+
+                  for (const target of possibleTargets) {
+                    try {
+                      __doPostBack(target, '');
+                      return { method: 'postback', target: target, success: true };
+                    } catch(e) {
+                      // continue
+                    }
                   }
                 }
 
-                // Fallback: use postback directly
-                if (typeof __doPostBack === 'function') {
-                  __doPostBack('download_txt', '');
-                  return { method: 'postback', success: true };
+                // Try direct link navigation
+                const links = document.querySelectorAll('a[href*="Veiculos"], a[href*="veiculos"]');
+                if (links.length > 0) {
+                  links[0].click();
+                  return { method: 'link', success: true };
                 }
 
                 return { success: false };
-              });
-              console.log('XLS click result:', JSON.stringify(xlsClicked));
-              await page.screenshot({ path: 'step6-xls-clicked.png', fullPage: true });
+              }).catch(e => ({ error: e.message }));
+              console.log('Postback result:', JSON.stringify(postbackResult));
+              await sleep(3000);
+              await page.screenshot({ path: 'step8-after-postback.png', fullPage: true });
 
-              // Wait for download
-              console.log('Waiting for download...');
+              // Step 9: Try navigating the iframe directly to the vehicles page
+              console.log('Step 9: Navigating iframe to Consulta_Veiculos.aspx...');
+
+              // Find the main content iframe
+              const iframeHandle = await page.$('iframe[name="main"], iframe[id="main"], iframe');
+              if (iframeHandle) {
+                console.log('Found iframe element');
+                const frame = await iframeHandle.contentFrame();
+                if (frame) {
+                  console.log('Got iframe content frame');
+                  try {
+                    await frame.goto('https://sistema.primebeneficios.com.br/Admin/Consulta_Veiculos.aspx', {
+                      waitUntil: 'networkidle2',
+                      timeout: 30000
+                    });
+                    console.log('Navigated iframe to Veiculos page');
+                    await sleep(3000);
+                    await page.screenshot({ path: 'step9-veiculos-page.png', fullPage: true });
+
+                    // Now try to download XLS from within the iframe
+                    console.log('Step 10: Looking for Ações button in iframe...');
+                    const acoesResult = await frame.evaluate(() => {
+                      const buttons = document.querySelectorAll('button');
+                      for (const btn of buttons) {
+                        if (btn.textContent.trim() === 'Ações') {
+                          btn.click();
+                          return { found: true, clicked: true };
+                        }
+                      }
+                      return { found: false };
+                    });
+                    console.log('Ações result:', JSON.stringify(acoesResult));
+                    await sleep(1000);
+                    await page.screenshot({ path: 'step10-acoes.png', fullPage: true });
+
+                    // Click XLS download
+                    console.log('Step 11: Clicking XLS download...');
+                    const xlsResult = await frame.evaluate(() => {
+                      // Try by ID
+                      const xlsLink = document.getElementById('download_txt');
+                      if (xlsLink) {
+                        xlsLink.click();
+                        return { method: 'id', success: true };
+                      }
+
+                      // Try by text
+                      const links = document.querySelectorAll('a');
+                      for (const link of links) {
+                        if (link.textContent.trim().toUpperCase() === 'XLS') {
+                          link.click();
+                          return { method: 'text', success: true };
+                        }
+                      }
+
+                      // Try postback
+                      if (typeof __doPostBack === 'function') {
+                        __doPostBack('download_txt', '');
+                        return { method: 'postback', success: true };
+                      }
+
+                      return { success: false };
+                    });
+                    console.log('XLS result:', JSON.stringify(xlsResult));
+                    await page.screenshot({ path: 'step11-xls.png', fullPage: true });
+                  } catch (navError) {
+                    console.log('Iframe navigation error:', navError.message);
+                  }
+                }
+              }
+
+              // Step 12: Wait for download
+              console.log('Step 12: Waiting for download...');
               let downloadComplete = false;
               let attempts = 0;
               const maxAttempts = 30;
@@ -170,7 +326,10 @@ jobs:
                   console.log('Download completed! Files:', completedFiles);
                   downloadComplete = true;
 
-                  const xlsFile = completedFiles.find(f => f.toLowerCase().endsWith('.xls') || f.toLowerCase().endsWith('.xlsx')) || completedFiles[0];
+                  const xlsFile = completedFiles.find(f =>
+                    f.toLowerCase().endsWith('.xls') ||
+                    f.toLowerCase().endsWith('.xlsx')
+                  ) || completedFiles[0];
                   const xlsPath = path.join(downloadPath, xlsFile);
 
                   // Parse XLS and extract vehicle data
@@ -201,16 +360,6 @@ jobs:
 
                   console.log(`Found ${vehicles.length} vehicles`);
 
-                  // Load existing revisions.json if exists
-                  let revisions = {};
-                  try {
-                    if (fs.existsSync('revisions.json')) {
-                      revisions = JSON.parse(fs.readFileSync('revisions.json', 'utf8'));
-                    }
-                  } catch (e) {
-                    console.log('No existing revisions.json or error reading it');
-                  }
-
                   const result = {
                     success: true,
                     vehicles: vehicles,
@@ -222,7 +371,7 @@ jobs:
                 }
               }
 
-              await page.screenshot({ path: 'step7-final.png', fullPage: true });
+              await page.screenshot({ path: 'step12-final.png', fullPage: true });
 
               if (!downloadComplete) {
                 console.log('Download folder contents:', fs.readdirSync(downloadPath));
